# couriers

./: README.md
api/: Makefile  docker-compose.yaml
api/app/: pyproject.toml  script.sh
api/app/src/: base_crud.py  init_database.py
api/app/src/config/: settings.py  urls.py
api/app/src/couriers/: couriers_urls.py  models.py  serializers.py
api/app/src/couriers/controllers/: couriers.py
api/app/src/couriers/services/: couriers_core.py  couriers_repository.py  couriers_service.py
api/app/tests/: test_worker_saving.py
db/: Makefile  docker-compose.yaml
migrations/: Makefile  docker-compose.yaml
migrations/app/: pyproject.toml
migrations/app/src/migrations/versions/: 000.py
